# 17th-WorkNet

./: .env.example  .gitignore  .pre-commit-config.yaml  Procfile  README.md  makefile  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
Templates/layout/: base.html
Templates/shared/: nav.html  navbar.html
apps/analytics/: urls.py  views.py
apps/commons/templatetags/: svg_icon.py
apps/companies/: admin.py  apps.py  models.py  rules.py  urls.py  views.py
apps/companies/forms/: __init__.py  companies_form.py  company_form.py  form.py
apps/company_job/: apps.py  models.py  urls.py  views.py
apps/company_job/forms/: job_form.py
apps/companys/: apps.py  models.py  urls.py  views.py
apps/jobs/: __init__.py  apps.py  models.py  rules.py  signals.py  urls.py  views.py
apps/payments/: ulrs.py  urls.py  views.py
apps/posts/: apps.py  models.py  rules.py  signals.py  urls.py  views.py
apps/resumes/: apps.py  models.py  urls.py  views.py
apps/users/: apps.py  context_processors.py  models.py  rule_required.py  rules.py  signals.py  urls.py  views.py
company_job/: apps.py  models.py
company_job/migrations/: 0001_initial.py
companys/: apps.py  models.py  views.py
companys/forms/: company_form.py
companys/migrations/: 0001_initial.py  0003_alter_company_companys_tel_alter_company_tel.py
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: settings.py  urls.py
lib/models/: paginate_queryset.py  rule_required.py  soft_delete.py
lib/utils/: env.py
page/: urls.py  views.py
page/templates/: index.html
pages/: urls.py  views.py
pages/templates/: home.html
posts/: models.py
src/scripts/: alert.js  app.js  chart.js  date.js  fontawesome.js  map.js  notify.js  referrer.js  tagInput.js  tag_input.js
src/styles/: github-markdown.css  styles.css
static/scripts/: map.js
staticfiles/scripts/: app.js
staticfiles/styles/: styles.css
templates/: 403.html  404.html  500.html  backend.html  frontend.html  no_permission.html
templates/layout/: base.html
templates/layouts/: backend.html  base.html  frontend.html
templates/shared/: _pagination.html  backend_footer.html  backend_navbar.html  footer.html  job_favorite.html  message.html  nav.html  navbar.html  notify.html
users/: urls.py  views.py
users/templates/: index.html  register.html  sign_in.html
(+136 files in other folders)
